# hyper-plotter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in  parallel-ploter.sln
contrib/: CMakeLists.txt
contrib/shabal/: CMakeLists.txt  shabal.h
kernel/: kernel.cl  kernel.h
parallel-ploter/: parallel-ploter.cpp  parallel-ploter.vcxproj  parallel-ploter.vcxproj.filters
script/: getPlotID.bat  listDrivers.bat  runPplotter.bat  runplotter.bat
src/: CMakeLists.txt  config.h.in  main.cpp  plotter.cpp  plotter.h  report.h  task.h  task_hasher.h  task_writer.h  worker.h  worker_hasher.cpp  worker_hasher.h  worker_writer.cpp  worker_writer.h
src/common/: base58.cpp  base58.h  file.h  paged_block.h  queue.h  signal.h  timer.h  utils.h
src/poc/: cpu_plotter.h  gpu_plotter.h  plotter_base.h
